[package]
name = "sea0"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
irc = "0.15.0"
tokio = { version = "1.6.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
